docs: :memo: add swagger docs for chats
